# switchboard-lib

./: .gitignore  .sample.env  README.md  docker-compose.clickhouse.yaml  docker-compose.localstack.yaml  docker-compose.minio.yaml  docker-compose.postgres.yaml  pyproject.toml
src/switchboard/: config.py  factory.py
src/switchboard/base/: database.py  storage.py
src/switchboard/connectors/: __init__.py
src/switchboard/connectors/blob_storage/: gcs.py  localfs.py  minio.py  s3.py
src/switchboard/connectors/db_engines/: bigquery.py  clickhouse.py  duckdb.py  postgres.py  redshift.py
src/switchboard/utils/: logging.py  resilience.py  schemas.py
tests/: test_aws_redshift.py  test_aws_s3.py  test_bigquery.py  test_databases.py  test_e2e_pipeline.py  test_gcs.py  test_logging.py  test_resilience.py  test_storage.py  test_switchboard.py  test_validation.py
