[project]
name = "switchboard-data-platform"
version = "0.1.1"
description = "Multi-cloud database and storage switchboard abstraction layer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.7",
    "clickhouse-connect>=1.0.0",
    "db-dtypes>=1.4.4",
    "duckdb>=1.5.2",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-redshift>=1.0.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/switchboard"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]